--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
         <nav class="site-nav">
             <a class="logo" href="./index.html"><span class="logo--accent">Web</span>Studio</a>
@@ -42,7 +42,7 @@
             </li>
         </ul>
         </div>
-    </header>   
+    </header>    -->
     <main>
         <!--hero-->
         <section class="hero">
@@ -52,7 +52,7 @@
             </div>
         </section>
         <!--advantage-->
-        <section class="advantage">
+        <!-- <section class="advantage">
             <div class="container">
                 <h2 class="advantage__title visually-hidden">Преимущества</h2>
                 <ul class="advantage__list">
@@ -94,9 +94,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--services-->
-        <section class="services section">
+        <!-- <section class="services section">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="services__list">
@@ -114,9 +114,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--team-->
-        <section id="team" class="team section">
+        <!-- <section id="team" class="team section">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team__list">
@@ -270,9 +270,9 @@
                     </li>           
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- clients -->
-        <section class="clients section">
+        <!-- <section class="clients section">
             <div class="container">
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="clients__list">
@@ -320,13 +320,12 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="footer__wrap">
             <a class="logo" href="./index.html" ><span class="logo--accent">Web</span><span class="logo--inverse">Studio</span></a>
-            <!-- contacts -->
             <address class="footer__address">
                 <ul class="footer-address__list">
                     <li class="footer-address__item">
@@ -341,7 +340,6 @@
                 </ul>
             </address>
             </div>
-            <!-- footer social links -->
             <div class="footer__social">
                 <p class="footer-social__title">присоединяйтесь</p>
                 <ul class="footer-social__list">
@@ -375,7 +373,6 @@
                     </li>
                 </ul>
             </div>
-            <!-- subscription -->
             <form class="subscription">
                 <b class="subscription__title">Подпишитесь на рассылку</b>
                 <div class="subscription__wrap">
@@ -389,9 +386,9 @@
                 </div>
             </form>
         </div>
-    </footer>
+    </footer> -->
     <!-- modal button -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal__btn-close" type="button" data-modal-close>
                 <svg class="icon-close" width="18px" height="18px">
@@ -433,7 +430,7 @@
                 
             </form>
         </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
 </body>
 </html>
