--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </section>
         <!--advantage-->
-        <!-- <section class="advantage">
+        <section class="advantage">
             <div class="container">
                 <h2 class="advantage__title visually-hidden">Преимущества</h2>
                 <ul class="advantage__list">
@@ -94,7 +94,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section> 
         <!--services-->
         <!-- <section class="services section">
             <div class="container">
