--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </section>
         <!--advantage-->
-        <section class="advantage">
+        <section class="advantage section">
             <div class="container">
                 <h2 class="advantage__title visually-hidden">Преимущества</h2>
                 <ul class="advantage__list">
@@ -96,25 +96,40 @@
             </div>
         </section> 
         <!--services-->
-        <!-- <section class="services section">
+        <section class="services"> 
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="services__list">
                     <li class="services__item">
                         <h3 class="services-item__title">Десктопные приложения</h3>
-                        <img class="services-item__image" src="./images/img-services-1.jpg" alt="программист работает по ТЗ" height="294" width="370">
+                        <img class="services-item__image" 
+                        src="./images/services/img-services-1.jpg" 
+                        srcset="./images/services/img-services-1@2x.jpg 2x"
+                        alt="программист работает по ТЗ" 
+                        height="294" 
+                        width="370">
                     </li>
                     <li class="services__item">
                         <h3 class="services-item__title">Мобильные приложения</h3>
-                        <img class="services-item__image" src="./images/img-services-2.jpg" alt="веб дизайн для приложений на смартфоне" height="294" width="370">
+                        <img class="services-item__image" 
+                        src="./images/services/img-services-2.jpg" 
+                        srcset="./images/services/img-services-2@2x.jpg 2x"
+                        alt="веб дизайн для приложений на смартфоне" 
+                        height="294" 
+                        width="370">
                     </li>
                     <li class="services__item">
                         <h3 class="services-item__title">Дизайнерские решения</h3>
-                        <img class="services-item__image" src="./images/img-services-3.jpg" alt="разработка веб дизайна креативщиком" height="294" width="370">
+                        <img class="services-item__image" 
+                        src="./images/services/img-services-3.jpg" 
+                        srcset="./images/services/img-services-3@2x.jpg 2x"
+                        alt="разработка веб дизайна креативщиком" 
+                        height="294" 
+                        width="370">
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section> 
         <!--team-->
         <!-- <section id="team" class="team section">
             <div class="container">
