team-mobile done

--- a/index.html
+++ b/index.html
@@ -131,12 +131,14 @@
             </div>
         </section> 
         <!--team-->
-        <!-- <section id="team" class="team section">
+        <section id="team" class="team section"> 
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team__list">
                     <li class="team__item">
-                        <img class="team-item__photo" src="./images/igor.jpg" alt="Продакт дизайнер игорь" width="270" height="260">
+                        <img class="team-item__photo" 
+                        src="./images/igor.jpg" 
+                        alt="Продакт дизайнер игорь" >
                         <div class="team-item__info">
                             <h3 class="team-item__name">Игорь Демьяненко</h3>
                             <p class="team-item__position" lang="en">Product Designer</p>
@@ -173,7 +175,9 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img class="team-item__photo" src="./images/olga.jpg" alt="фронт-энд разработчик ольга" width="270" height="260">
+                        <img class="team-item__photo" 
+                        src="./images/olga.jpg" 
+                        alt="фронт-энд разработчик ольга">
                         <div class="team-item__info">
                             <h3 class="team-item__name">Ольга Репина</h3>
                             <p class="team-item__position" lang="en">Frontend Developer</p>
@@ -210,7 +214,9 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img class="team-item__photo" src="./images/nikolay.jpg" alt="маркетолог николай" width="270" height="260">
+                        <img class="team-item__photo" 
+                        src="./images/nikolay.jpg" 
+                        alt="маркетолог николай">
                         <div class="team-item__info">
                             <h3 class="team-item__name">Николай Тарасов</h3>
                             <p class="team-item__position" lang="en">Marketing</p>
@@ -247,7 +253,9 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img class="team-item__photo" src="./images/michail.jpg" alt="УИ дизайнер михаил" width="270" height="260">
+                        <img class="team-item__photo" 
+                        src="./images/michail.jpg" 
+                        alt="УИ дизайнер михаил">
                         <div class="team-item__info">
                             <h3 class="team-item__name">Михаил Ермаков</h3>
                             <p class="team-item__position" lang="en">UI Designer</p>
@@ -285,7 +293,7 @@
                     </li>           
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- clients -->
         <!-- <section class="clients section">
             <div class="container">
