--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </div>
         </section>
         <!-- clients -->
-        <!-- <section class="clients section">
+        <section class="clients section">
             <div class="container">
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="clients__list">
@@ -343,7 +343,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- <footer class="footer">
         <div class="container">
