portfolio-filter done

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <title>WebStudio-portfolio</title>
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
         <nav class="site-nav">
             <a class="logo" href="./index.html"><span class="logo--accent">Web</span>Studio</a>
@@ -39,7 +39,7 @@
             </li>
         </ul>
         </div>
-    </header>
+    </header> -->
     <main>
       <section class="section">
           <div class="container">
@@ -58,7 +58,7 @@
                   <button class="portfolio-filter__btn" type="button">Маркетинг</button></li> 
           </ul>
           <!-- examples -->
-         <ul class="portfolio__projects">
+         <!-- <ul class="portfolio__projects">
              <li class="portfolio-projects__item" >
                  <a class="portfolio-projects__link" href="">
                      <div class="thumb">
@@ -167,77 +167,10 @@
                     </div>
                  </a>
              </li>
-         </ul>
+         </ul> -->
         </div>
       </section> 
     </main>
-    <footer class="footer">
-        <!-- contacts -->
-        <div class="container">
-            <div class="footer__wrap">
-            <a class="logo" href="./index.html" ><span class="logo--accent">Web</span><span class="logo--inverse">Studio</span></a>
-            <address>
-                <ul class="footer-address__list">
-                    <li class="footer-address__item">
-                        <a class="footer-address__link map" href="https://goo.gl/maps/psRtu3tgyUnC2bHMA" target="_blank"> г. Киев, пр-т Леси Украинки, 26 </a>
-                    </li>
-                    <li class="footer-address__item">
-                        <a class="footer-address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li class="footer-address__item">
-                        <a class="footer-address__link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
-            </div>
-            <div class="footer__social">
-                <p class="footer-social__title">присоединяйтесь</p>
-                <ul class="footer-social__list">
-                    <li class="footer-social__item">
-                        <a class="footer-social__link" href="https://www.instagram.com/" target="_blank">
-                            <svg class="footer-social__logo" width="20px" height="20px">
-                                <use href="./images/sprite.svg#instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a class="footer-social__link" href="https://twitter.com/" target="_blank">
-                            <svg class="footer-social__logo" width="20px" height="20px">
-                                <use href="./images/sprite.svg#twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a class="footer-social__link" href="https://www.facebook.com" target="_blank">
-                            <svg class="footer-social__logo" width="20px" height="20px">
-                                <use href="./images/sprite.svg#facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a class="footer-social__link" href="https://www.linkedin.com" target="_blank">
-                            <svg class="footer-social__logo" width="20px" height="20px">
-                                <use href="./images/sprite.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-             <!-- subscription -->
-             <form class="subscription">
-                <b class="subscription__title">Подпишитесь на рассылку</b>
-                <div class="subscription__wrap">
-                    <label for="subs-email"></label>
-                    <input class="subscription__input" id="subs-email" name="subs-email" type="email" placeholder="E-mail"
-                        autocomplete="email">
-                    <button class="main__btn" type="submit">Подписаться
-                        <svg class="subscription-btn__icon" width="24px" height="24px">
-                            <use href="./images/sprite.svg#icon-send"></use>
-                        </svg>
-                    </button>
-                </div>
-            </form>
-        </div>
-    </footer>
+<!-- footer -->
 </body>
 </html>
