portfolio-projects done

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,12 +58,14 @@
                   <button class="portfolio-filter__btn" type="button">Маркетинг</button></li> 
           </ul>
           <!-- examples -->
-         <!-- <ul class="portfolio__projects">
+        <ul class="portfolio__projects">
              <li class="portfolio-projects__item" >
                  <a class="portfolio-projects__link" href="">
                      <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-1.jpg" alt="вебсайт технокряк" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-1.jpg" 
+                        alt="вебсайт технокряк">
                     </div>
                      <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Технокряк</h2>
@@ -75,7 +77,9 @@
                  <a class="portfolio-projects__link" href="">
                     <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-2.jpg" alt="дизайн постера" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-2.jpg" 
+                        alt="дизайн постера">
                     </div>
                      <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Постер New Orlean vs Golden Star</h2>
@@ -87,7 +91,9 @@
                  <a class="portfolio-projects__link" href="">
                     <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-3.jpg" alt="приложение для ресторана" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-3.jpg" 
+                        alt="приложение для ресторана">
                     </div>
                      <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Ресторан Seafood</h2>
@@ -99,7 +105,9 @@
                  <a class="portfolio-projects__link" href="">
                     <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-4.jpg" alt="проект прайм" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-4.jpg" 
+                        alt="проект прайм">
                     </div>
                      <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Проект Prime</h2>
@@ -111,7 +119,9 @@
                  <a class="portfolio-projects__link" href="">
                     <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-5.jpg" alt="приложение боксы" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-5.jpg" 
+                        alt="приложение боксы">
                     </div>
                     <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Проект Boxes</h2>
@@ -123,7 +133,9 @@
                  <a class="portfolio-projects__link" href="">
                     <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-6.jpg" alt="вебсайт про вдохновение" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-6.jpg" 
+                        alt="вебсайт про вдохновение">
                     </div>
                      <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Inspiration has no Borders</h2>
@@ -135,7 +147,9 @@
                  <a class="portfolio-projects__link" href="">
                     <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-7.jpg" alt="дизайн издания" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-7.jpg" 
+                        alt="дизайн издания">
                     </div>
                      <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Издание Limited Edition</h2>
@@ -147,7 +161,9 @@
                  <a class="portfolio-projects__link" href="">
                     <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-8.jpg" alt="проект лаб" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-8.jpg" 
+                        alt="проект лаб">
                     </div>
                      <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Проект LAB</h2>
@@ -159,7 +175,9 @@
                  <a class="portfolio-projects__link" href="">
                     <div class="thumb">
                         <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                        <img class="portfolio-projects__image" src="./images/img-project-9.jpg" alt="приложение для развития бизнеса" width="370" height="294">
+                        <img class="portfolio-projects__image" 
+                        src="./images/img-project-9.jpg" 
+                        alt="приложение для развития бизнеса">
                     </div>
                      <div class="cards-wrapper">
                         <h2 class="portfolio-projects__title">Growing Business</h2>
@@ -167,7 +185,7 @@
                     </div>
                  </a>
              </li>
-         </ul> -->
+         </ul> 
         </div>
       </section> 
     </main>
