--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__wrap">
             <a class="logo" href="./index.html" ><span class="logo--accent">Web</span><span class="logo--inverse">Studio</span></a>
@@ -409,8 +409,7 @@
                 </div>
             </form>
         </div>
-    </footer> -->
-    <!-- modal button -->
+    </footer> 
     <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal__btn-close" type="button" data-modal-close>
