added footer portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -189,6 +189,77 @@
         </div>
       </section> 
     </main>
-<!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrap">
+                <a class="logo" href="./index.html"><span class="logo--accent">Web</span><span
+                        class="logo--inverse">Studio</span></a>
+                <address class="footer__address">
+                    <ul class="footer-address__list">
+                        <li class="footer-address__item">
+                            <a class="footer-address__link map" href="https://goo.gl/maps/psRtu3tgyUnC2bHMA"
+                                target="_blank"> г. Киев, пр-т Леси Украинки, 26 </a>
+                        </li>
+                        <li class="footer-address__item">
+                            <a class="footer-address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-address__item">
+                            <a class="footer-address__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer__social">
+                <p class="footer-social__title">присоединяйтесь</p>
+                <ul class="footer-social__list">
+                    <li class="footer-social__item">
+                        <a class="footer-social__link" href="https://www.instagram.com/" rel="noreferrer noopener"
+                            target="_blank">
+                            <svg class="footer-social__logo" width="20px" height="20px" aria-label="instagram">
+                                <use href="./images/sprite.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social__item">
+                        <a class="footer-social__link" href="https://twitter.com/" rel="noreferrer noopener"
+                            target="_blank">
+                            <svg class="footer-social__logo" width="20px" height="20px" aria-label="twitter">
+                                <use href="./images/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social__item">
+                        <a class="footer-social__link" href="https://www.facebook.com" rel="noreferrer noopener"
+                            target="_blank">
+                            <svg class="footer-social__logo" width="20px" height="20px" aria-label="facebook">
+                                <use href="./images/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social__item">
+                        <a class="footer-social__link" href="https://www.linkedin.com" rel="noreferrer noopener"
+                            target="_blank">
+                            <svg class="footer-social__logo" width="20px" height="20px" aria-label="linkedin">
+                                <use href="./images/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <form class="subscription">
+                <b class="subscription__title">Подпишитесь на рассылку</b>
+                <div class="subscription__wrap">
+                    <label for="subs-email"></label>
+                    <input class="subscription__input" id="subs-email" name="subs-email" type="email" placeholder="E-mail"
+                        autocomplete="email">
+                    <button class="main__btn" type="submit">Подписаться
+                        <svg class="subscription-btn__icon" width="24px" height="24px">
+                            <use href="./images/sprite.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
