--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             </form>
         </div>
     </footer> 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden container" data-modal>
         <div class="modal">
             <button class="modal__btn-close" type="button" data-modal-close>
                 <svg class="icon-close" width="18px" height="18px">
@@ -449,10 +449,9 @@
                     <label class="checkbox__label" for="check">Соглашаюсь с рассылкой и принимаю<a class="policy-link" href="https://policies.google.com/terms?hl=ru-UA&fg=1">Условия договора</a></label>
                 </div>
                 <button class="main__btn" type="submit">Отправить</button>
-                
             </form>
         </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
 </body>
 </html>
