added menu button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container">
         <nav class="site-nav">
             <a class="logo" href="./index.html"><span class="logo--accent">Web</span>Studio</a>
@@ -22,6 +22,12 @@
                 <li class="site-nav__item"> 
                     <a class="site-nav__link" href="#team">Контакты</a></li>
             </ul>
+            <button type="button" class="menu-button">
+                <svg class="mobile-menu"width="40" height="40">
+                    <use href="./images/sprite.svg#icon-menu"></use>
+                    <use href="./images/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
         </nav>    
         <ul class="contacts">
             <li class="contacts__item">
@@ -42,7 +48,7 @@
             </li>
         </ul>
         </div>
-    </header>    -->
+    </header> 
     <main>
         <!--hero-->
         <section class="hero">
@@ -413,7 +419,7 @@
     <div class="backdrop is-hidden container" data-modal>
         <div class="modal">
             <button class="modal__btn-close" type="button" data-modal-close>
-                <svg class="icon-close" width="18px" height="18px">
+                <svg class="icon-close" width="30" height="30">
                     <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
