--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <div class="container">
         <nav class="site-nav">
             <a class="logo" href="./index.html"><span class="logo--accent">Web</span>Studio</a>
+            <button type="button" class="menu-button">
+                <svg class="mobile-menu" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-menu"></use>
+                    <use href="./images/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
             <ul class="site-nav__list">
                 <li class="site-nav__item"> 
                     <a class="site-nav__link current" href="./index.html">Студия</a></li>
@@ -22,12 +28,6 @@
                 <li class="site-nav__item"> 
                     <a class="site-nav__link" href="#team">Контакты</a></li>
             </ul>
-            <button type="button" class="menu-button">
-                <svg class="mobile-menu"width="40" height="40">
-                    <use href="./images/sprite.svg#icon-menu"></use>
-                    <use href="./images/sprite.svg#icon-close"></use>
-                </svg>
-            </button>
         </nav>    
         <ul class="contacts">
             <li class="contacts__item">
@@ -419,7 +419,7 @@
     <div class="backdrop is-hidden container" data-modal>
         <div class="modal">
             <button class="modal__btn-close" type="button" data-modal-close>
-                <svg class="icon-close" width="18" height="18">
+                <svg class="icon-close" width="18px" height="18px">
                     <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
