added modal scroll

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             </form>
         </div>
     </footer> 
-    <div class="backdrop is-hidden container" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal__btn-close" type="button" data-modal-close>
                 <svg class="icon-close" width="18px" height="18px">
