--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal__btn-close" type="button" data-modal-close>
-                <svg class="icon-close" width="18px" height="18px">
+                <svg class="modal__btn-icon" width="18px" height="18px">
                     <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
