--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         <div class="modal">
             <button class="modal__btn-close" type="button" data-modal-close>
                 <svg class="modal__btn-icon" width="18px" height="18px">
-                    <use href="./images/sprite.svg#icon-close"></use>
+                    <use href="./images/sprite.svg#icon-person"></use>
                 </svg>
             </button>
             <form class="modal__form">
