--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a class="logo" href="./index.html"><span class="logo--accent">Web</span>Studio</a>
             <button type="button" class="menu-button">
                 <svg class="mobile-menu" width="40" height="40">
-                    <use href="./images/sprite.svg#icon-menu"></use>
-                    <use href="./images/sprite.svg#icon-close"></use>
+                    <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
+                    <use class="icon-close" href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
             <ul class="site-nav__list">
